@@ -1,0 +1,93 @@
+<!DOCTYPE html>
+<!-- Please keep the CLASS-IM[] style target descriptions for compatibility to the paper -->
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" type="text/css" href="../sample.css"/>
+    <title>INTER-Mediator - Sample - Asset List/MySQL</title>
+    <script src="asset_contexts.php"></script>
+    <script>
+        window.onload = function(){
+            INTERMediator.construct();
+        }
+        function setBackDate(id)    {
+            INTERMediator_DBAdapter.db_update({
+                name:"rentback",
+                conditions:[
+                    {field:'asset_id', operator:'=', value:id},
+                    {field:'backdate', operator:'IS NULL'}],
+                dataset:[{field:'backdate', value:'2013-06-29'}]
+            });
+            INTERMediator.construct();
+        }
+    </script>
+</head>
+<body>
+<!--<p><a href="asset_list.html">資産一覧に戻る</a></p>-->
+<div id="IM_NAVIGATOR"></div>
+<table>
+    <thead>
+    <tr><th></th><th>分類</th><th>名称</th><th>メーカー</th><th>型番</th><th>取得日</th><th>破棄日</th><th></th></tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>
+            <button onclick="location.href = 'asset_detail.html?id=$';"
+                    class="IM[asset@asset_id@$onclick]">
+                詳細</button>
+        </td>
+        <td class="IM[asset@category]"></td>
+        <td class="IM[asset@name]"></td>
+        <td class="IM[asset@manifacture]"></td>
+        <td class="IM[asset@productinfo]"></td>
+        <td class="IM[asset@purchase]"></td>
+        <td class="IM[asset@discard]"></td>
+        <td></td>
+    </tr>
+    </tbody>
+</table>
+
+<table>
+    <tbody>
+        <tr>
+            <th>名称</th><td><input type="text" class="IM[assetdetail@name]"/></td>
+            <th>分類</th><td><input type="text" class="IM[assetdetail@category]"/></td>
+            <th>メモ</th>
+        </tr>
+        <tr><th>メーカー</th>
+            <td><input type="text" class="IM[assetdetail@manifacture]"/></td>
+            <th>型番</th><td><input type="text" class="IM[assetdetail@productinfo]"/></td>
+            <td rowspan="4">
+                <textarea class="IM[assetdetail@memo]"></textarea>
+                <hr>
+                <button onclick="setBackDate($)" class="IM[assetdetail@asset_id@$onclick]">本日返却</button>
+            </td>
+        </tr>
+        <tr>
+            <th>取得日</th><td><input type="text" class="IM[assetdetail@purchase]"/></td>
+            <th>破棄日</th><td><input type="text" class="IM[assetdetail@discard]"/></td>
+        </tr>
+        <tr><td colspan="4">
+            <table>
+                <thead><tr><th>貸出日</th><th>返却日</th><th>担当者</th><th>メモ</th></tr></thead>
+                <tbody>
+                    <tr>
+                        <td class="IM[rent@rentdate]"></td>
+                        <td class="IM[rent@backdate]"></td>
+                        <td>
+                            <select class="IM[rent@staff_id]">
+                                <option class="IM[staff@staff_id@value|staff@name]"></option>
+                            </select>
+                        </td>
+                        <td><input type="text" class="IM[rent@memo]"/></td>
+
+                    </tr>
+                </tbody>
+            </table>
+        </td></tr>
+    </tbody>
+</table>
+
+</body>
+</html>
