@@ -77,6 +77,7 @@
         <td>
             <a href="Sample_Asset/asset_list.html">Japanese</a>
             <a href="Sample_Asset_English/asset_list.html">English</a>
+            <a href="Sample_Asset/asset.html">Improved</a>
         </td>
         <td>
             <a href="Sample_Asset/asset_list_FMS.html">Japanese</a>
