@@ -7,6 +7,12 @@
  *   INTER-Mediator is supplied under MIT License.
  */
 
+*   {
+//    font-family: Verdana, "游ゴシック", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+    font-family: Verdana, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+    font-size: 10pt;
+}
+
 .IM_NAV_panel {
     background-color: #CCCCCC;
     padding: 4px;
