@@ -11,6 +11,7 @@ Latest changes might exist on the GitHub repository. Please check https://github
 Ver.4.6 (in development)
 - Add errorMessageStore(), isExistRequiredTable(), register(), unregister(), matchInRegisterd(), queryForTest(), 
   appendIntoRegisterd() and removeFromRegisterd() to DB_FileMaker_FX class.
+- In case of 'navi-control' is 'master-hide', the pagenation control is going to hide when the detail area apears.
 - [BUG FIX] DB_FileMaker_FX used the alternative data source not only the 'issuedhash' table also 'authuer' and some
   tables for authorization/authentication. Now, it uses just the 'issuedhash' table for the alternative data source.
 - [BUG FIX] Calculation for strings didn't work, ex. >...
